# Keylogger-dashboard

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  EXE_BUILDER.txt  LICENSE  README.md  app.py  blocked_words.json  client.py  clients.db  docker-compose.yml  flowchart.drawio.xml  main.py  main.spec  pyproject.toml  requirements.txt  run.bat
templates/: base.html  history.html  history_user.html  history_users.html  index.html  login.html  manage_blocked_words.html  register.html
