[project]
name = "keylogger-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "keyboard>=0.13.5",
    "pynput>=1.8.1",
    "python-socketio>=5.13.0",
    "requests>=2.32.5",
    "websocket-client>=1.8.0",
]
